added update user's password api in gin and grpc server; refactored the proto file;
